# auto-video

./: .gitignore  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE.zh-CN.md  FRONTEND_INFORMATION_ARCHITECTURE.md  README.md  TECH_STACK.md  WEB_AUTOMATION_UPLOAD_ANALYSIS_GUIDE.md  auto-video.config.example.json  package-lock.json  package.json  tsconfig.json
demo/: README.md  package-lock.json  package.json  questions.example.json  tsconfig.json
demo/src/: accountManager.test.ts  accountManager.ts  chatAutomation.ts  providers.ts  server.ts  taskQueue.ts  types.ts  workbench.test.ts  workbench.ts
demo/ui/: index.html  package-lock.json  package.json  vite.config.ts
demo/ui/src/: App.tsx  styles.css  types.ts
demo/ui/src-tauri/: Cargo.toml  tauri.conf.json
prompts/: capability-assessment.md  narrative-map.md  qa.md  research.md  script.md  storyboard.md  style-dna.md
src/: index.ts
src/browser/: playwrightAutomation.ts  session.ts
src/config/: store.test.ts  store.ts  types.ts
src/extractors/: parsers.test.ts  parsers.ts
src/media/: keyframe.ts  scenePlan.ts  tts.ts
src/orchestrator/: pipeline.ts  rotation.test.ts  runControl.test.ts  runControl.ts  runStore.test.ts  runStore.ts  runs.test.ts  runs.ts  types.ts
src/render/: ffmpeg.ts
src/utils/: fs.ts  time.test.ts  time.ts
src/validators/: schemas.test.ts  schemas.ts
src/web/: server.ts
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src/api/: client.ts  sse.ts
ui/src/hooks/: useApi.ts
(+24 files in other folders)
