[package]
name = "auto-video-studio"
version = "0.1.0"
description = "Auto Video Studio - AI-Powered Video Generation"
edition = "2021"

[lib]
name = "auto_video_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
